{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 221,
  "lineage": "4b30d403-fdab-4df3-c637-5100ee0d79e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f423997a6e87ca67",
            "arn": "arn:aws:ec2:us-east-1:970906474217:elastic-ip/eipalloc-0f423997a6e87ca67",
            "association_id": "eipassoc-0b20c9065a3f6fbca",
            "domain": "vpc",
            "id": "eipalloc-0f423997a6e87ca67",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0be70e5b2fb8dd175",
            "private_dns": "ip-10-0-188-72.ec2.internal",
            "private_ip": "10.0.188.72",
            "public_dns": "ec2-3-213-167-95.compute-1.amazonaws.com",
            "public_ip": "3.213.167.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051702b0834b1aaa5",
            "arn": "arn:aws:ec2:us-east-1:970906474217:elastic-ip/eipalloc-051702b0834b1aaa5",
            "association_id": "eipassoc-03bac183f42d09718",
            "domain": "vpc",
            "id": "eipalloc-051702b0834b1aaa5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08f4fccf425af9761",
            "private_dns": "ip-10-0-213-232.ec2.internal",
            "private_ip": "10.0.213.232",
            "public_dns": "ec2-100-28-94-124.compute-1.amazonaws.com",
            "public_ip": "100.28.94.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "airflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:internet-gateway/igw-06668b8dae1991a99",
            "id": "igw-06668b8dae1991a99",
            "owner_id": "970906474217",
            "tags": {
              "Name": "airflow-igw"
            },
            "tags_all": {
              "Name": "airflow-igw"
            },
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "dependencies": [
            "aws_vpc.airflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f423997a6e87ca67",
            "association_id": "eipassoc-0b20c9065a3f6fbca",
            "connectivity_type": "public",
            "id": "nat-0fa65ab9ffd506a89",
            "network_interface_id": "eni-0be70e5b2fb8dd175",
            "private_ip": "10.0.188.72",
            "public_ip": "3.213.167.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0004b0a767a20d86c"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1_eip",
            "aws_subnet.airflow_public_subnet_1",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051702b0834b1aaa5",
            "association_id": "eipassoc-03bac183f42d09718",
            "connectivity_type": "public",
            "id": "nat-006a75db0b278d143",
            "network_interface_id": "eni-08f4fccf425af9761",
            "private_ip": "10.0.213.232",
            "public_ip": "100.28.94.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-019d48defcc9585c6"
          },
          "dependencies": [
            "aws_eip.nat_gateway_2_eip",
            "aws_subnet.airflow_public_subnet_2",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "airflow_private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:route-table/rtb-0275573d1f025c7f3",
            "id": "rtb-0275573d1f025c7f3",
            "owner_id": "970906474217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa65ab9ffd506a89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "airflow-private-rt-1"
            },
            "tags_all": {
              "Name": "airflow-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1_eip",
            "aws_nat_gateway.nat_gateway_1",
            "aws_subnet.airflow_public_subnet_1",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "airflow_private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:route-table/rtb-061c539d58fd1648d",
            "id": "rtb-061c539d58fd1648d",
            "owner_id": "970906474217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006a75db0b278d143",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "airflow-private-rt-2"
            },
            "tags_all": {
              "Name": "airflow-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_2_eip",
            "aws_nat_gateway.nat_gateway_2",
            "aws_subnet.airflow_public_subnet_2",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "airflow_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:route-table/rtb-0ff668121722521ab",
            "id": "rtb-0ff668121722521ab",
            "owner_id": "970906474217",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06668b8dae1991a99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "airflow-public-rt"
            },
            "tags_all": {
              "Name": "airflow-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.airflow_igw",
            "aws_vpc.airflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "airflow_private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a658fadbccb21c65",
            "route_table_id": "rtb-0275573d1f025c7f3",
            "subnet_id": "subnet-043db820a8fae3063"
          },
          "dependencies": [
            "aws_eip.nat_gateway_1_eip",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.airflow_private_rt_1",
            "aws_subnet.airflow_private_subnet_1",
            "aws_subnet.airflow_public_subnet_1",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "airflow_private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9aa771200d781de",
            "route_table_id": "rtb-061c539d58fd1648d",
            "subnet_id": "subnet-04c3b54d5593980b5"
          },
          "dependencies": [
            "aws_eip.nat_gateway_2_eip",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.airflow_private_rt_2",
            "aws_subnet.airflow_private_subnet_2",
            "aws_subnet.airflow_public_subnet_2",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "airflow_public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc55b21c02ed7fc",
            "route_table_id": "rtb-0ff668121722521ab",
            "subnet_id": "subnet-0004b0a767a20d86c"
          },
          "dependencies": [
            "aws_internet_gateway.airflow_igw",
            "aws_route_table.airflow_public_rt",
            "aws_subnet.airflow_public_subnet_1",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "airflow_public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d9730fb0da256de",
            "route_table_id": "rtb-0ff668121722521ab",
            "subnet_id": "subnet-019d48defcc9585c6"
          },
          "dependencies": [
            "aws_internet_gateway.airflow_igw",
            "aws_route_table.airflow_public_rt",
            "aws_subnet.airflow_public_subnet_2",
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:security-group/sg-0347f783329ae486e",
            "description": "Security group for Airflow MWAA",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0347f783329ae486e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "airflow-sg",
            "name_prefix": "",
            "owner_id": "970906474217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "airflow-sg"
            },
            "tags_all": {
              "Name": "airflow-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.airflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "airflow_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:subnet/subnet-043db820a8fae3063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043db820a8fae3063",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970906474217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "airflow-private-1"
            },
            "tags_all": {
              "Name": "airflow-private-1"
            },
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "dependencies": [
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "airflow_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:subnet/subnet-04c3b54d5593980b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c3b54d5593980b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970906474217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "airflow-private-2"
            },
            "tags_all": {
              "Name": "airflow-private-2"
            },
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "dependencies": [
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "airflow_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:subnet/subnet-0004b0a767a20d86c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0004b0a767a20d86c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970906474217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "airflow-public-1"
            },
            "tags_all": {
              "Name": "airflow-public-1"
            },
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "dependencies": [
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "airflow_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:subnet/subnet-019d48defcc9585c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019d48defcc9585c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970906474217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "airflow-public-2"
            },
            "tags_all": {
              "Name": "airflow-public-2"
            },
            "vpc_id": "vpc-07008316bd0eb6a64"
          },
          "dependencies": [
            "aws_vpc.airflow_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "airflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970906474217:vpc/vpc-07008316bd0eb6a64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0623b5c8da95d3316",
            "default_route_table_id": "rtb-045e2e59392f1cfb8",
            "default_security_group_id": "sg-0f27a43abc7074875",
            "dhcp_options_id": "dopt-d95ab7a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07008316bd0eb6a64",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045e2e59392f1cfb8",
            "owner_id": "970906474217",
            "tags": {
              "Name": "airflow-vpc"
            },
            "tags_all": {
              "Name": "airflow-vpc"
            }
          }
        }
      ]
    }
  ]
}